--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-</<!DOCTYPE html>
-<html lang="ko" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="./style.css">
-        <title>띵동</title>
-    </head>
-    <body>
-        <p id="main_contents">띵동</p>
-    </body>
-</html>
+test
